# pyohwa

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
crates/pyohwa-cli/: Cargo.toml
crates/pyohwa-cli/src/: main.rs
crates/pyohwa-core/: Cargo.toml  build.rs
crates/pyohwa-core/src/: config.rs  error.rs  lib.rs
crates/pyohwa-core/src/content/: frontmatter.rs  loader.rs  mod.rs  page.rs
crates/pyohwa-core/src/markdown/: highlight.rs  mod.rs  parser.rs
crates/pyohwa-core/src/render/: assets.rs  embedded.rs  layout.rs  mod.rs  template.rs
crates/pyohwa-core/src/site/: graph.rs  mod.rs  route.rs
crates/pyohwa-search/: Cargo.toml
crates/pyohwa-search/src/: error.rs  indexer.rs  lib.rs  tokenizer.rs
crates/pyohwa-server/: Cargo.toml
crates/pyohwa-server/src/: error.rs  lib.rs  reload.rs  server.rs  watcher.rs
docs/: PRD.md
elm/src/: Flags.elm  Main.elm  Model.elm  Msg.elm  Ports.elm  Update.elm
elm/src/Search/: Modal.elm  Search.elm
elm/src/Theme/: Footer.elm  Layout.elm  Navbar.elm  Sidebar.elm  Toc.elm
elm/tests/: FlagsTest.elm  SearchTest.elm  UpdateTest.elm
examples/docs-site/: .gitignore  pyohwa.toml
examples/docs-site/content/: index.md
examples/docs-site/content/api/: endpoints.md  overview.md
examples/docs-site/content/guide/: getting-started.md  installation.md
scaffold/: pyohwa.toml
scaffold/content/: index.md
themes/default/: search.css  theme.css  typography.css
