[workspace]
resolver = "2"
members = [
    "crates/pyohwa-cli",
    "crates/pyohwa-core",
    "crates/pyohwa-server",
    "crates/pyohwa-search",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
