[workspace]
resolver = "2"
members = [
    "crates/pyohwa-cli",
    "crates/pyohwa-core",
    "crates/pyohwa-server",
    "crates/pyohwa-search",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/Palbahngmiyine/pyohwa"
homepage = "https://github.com/Palbahngmiyine/pyohwa"
authors = ["Palbahngmiyine"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
