[package]
name = "pyohwa-cli"
description = "CLI for Pyohwa — a zero-config static site generator built with Rust and Elm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["cli", "static-site", "ssg", "documentation"]
categories = ["command-line-utilities"]

[dependencies]
pyohwa-core = { version = "0.1.0", path = "../pyohwa-core" }
pyohwa-server = { version = "0.1.0", path = "../pyohwa-server" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
