[package]
name = "pyohwa-core"
version = "0.1.0"
edition = "2021"

[dependencies]
comrak = "0.36"
gray_matter = "0.2"
regex = "1"
syntect = "5"
toml = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
walkdir = "2"
pyohwa-search = { path = "../pyohwa-search" }

[dev-dependencies]
tempfile = "3"
