[package]
name = "pyohwa-core"
description = "Core engine for Pyohwa static site generator — config, markdown, rendering, and build pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["static-site", "ssg", "markdown", "documentation"]
categories = ["command-line-utilities", "web-programming"]
include = ["src/**/*", "build.rs", "Cargo.toml", "pre-built/**/*"]

[dependencies]
comrak = "0.36"
gray_matter = "0.2"
regex = "1"
syntect = "5"
toml = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
walkdir = "2"
pyohwa-search = { version = "0.1.0", path = "../pyohwa-search" }

[dev-dependencies]
tempfile = "3"
