[package]
name = "pyohwa-search"
description = "Search index builder for Pyohwa static site generator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["search", "static-site", "index"]
categories = ["text-processing"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = "1"
