[package]
name = "pyohwa-server"
description = "Development server with live reload for Pyohwa static site generator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["dev-server", "live-reload", "static-site"]
categories = ["development-tools", "web-programming"]

[dependencies]
pyohwa-core = { version = "0.1.0", path = "../pyohwa-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["fs"] }
notify = "7"
notify-debouncer-mini = "0.5"
futures = "0.3"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
